--- a/zengarden/style-guide-template/src/scss/style-guide.scss
+++ b/zengarden/style-guide-template/src/scss/style-guide.scss
@@ -6,21 +6,14 @@
 
 // color palette - these colors will be the color swatches of the Colors section
 
-$color-1: #8b9d83; // Artichoke - Action color
-$color-2: #6a7b76; // Xanadu
-$color-3: #3a4e48; // Dark Slate Gray
-$color-4: #beb0a7; // pale silver
-$color-5: #ffffff; // white
-$color-6: #040303; // black
 
-// additional colors
+/* -------------------------------- 
 
-$success: #6fce72; // green
-$alert: $color-3; // red
+xVariables 
 
-// fonts
-$primary-font: 'Alegreya', serif;
-$secondary-font:'Rock Salt', cursive;
+-------------------------------- */
+@import 'partials/variables';
+
 
 /* -------------------------------- 
 
@@ -130,7 +123,7 @@ xPage title
 
 -------------------------------- */
 
-main > h1 {
+main>h1 {
   color: $color-2;
 
   @include MQ(L) {
