--- a/zengarden/style-guide-template/src/scss/partials/_variables.scss
+++ b/zengarden/style-guide-template/src/scss/partials/_variables.scss
@@ -4,6 +4,7 @@ $color-3: #3a4e48; // Dark Slate Gray
 $color-4: #beb0a7; // pale silver
 $color-5: #ffffff; // white
 $color-6: #040303; // black
+$color-7: #008445; // black
 
 // additional colors
 
