--- a/zengarden/style-guide-template/src/scss/styles.scss
+++ b/zengarden/style-guide-template/src/scss/styles.scss
@@ -1,1 +1,5 @@
 @import 'partials/variables';
+@import 'partials/reset';
+@import 'partials/prefix-mixins';
+@import 'partials/layout'; // responsive grid and media queries
+@import 'partials/typography';
