--- a/zengarden/style-guide-template/src/scss/partials/_typography.scss
+++ b/zengarden/style-guide-template/src/scss/partials/_typography.scss
@@ -5,48 +5,50 @@ h2 {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 3.4rem;
   font-weight: 300;
   line-height: 1.2;
   margin: 0 0 0.4em;
-
-  @include MQ(S) {
-    font-size: 3.2rem;
-  }
-
-  @include MQ(M) {
-    font-size: 4rem;
-  }
 }
 
-h2 {
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 1em 0;
 
-  @include MQ(S) {
-    font-size: 1.8rem;
-    margin: 1em 0 1.4em;
-  }
-}
+//   @include MQ(S) {
+//     font-size: 3.2rem;
+//   }
 
-section > h2::before {
-  /* number before each section title */
-  color: darken($color-4, 15%);
-}
+//   @include MQ(M) {
+//     font-size: 4rem;
+//   }
+// }
 
-p {
-  font-size: 1.4rem;
-  line-height: 1.4;
-  color: lighten($color-2, 25%);
+// h2 {
+//   font-weight: bold;
+//   text-transform: uppercase;
+//   margin: 1em 0;
 
-  a {
-    color: $color-1;
-    text-decoration: underline;
-  }
+//   @include MQ(S) {
+//     font-size: 1.8rem;
+//     margin: 1em 0 1.4em;
+//   }
+// }
 
-  @include MQ(S) {
-    font-size: 1.6rem;
-    line-height: 1.6;
-  }
-}
+// section > h2::before {
+//   /* number before each section title */
+//   color: darken($color-4, 15%);
+// }
+
+// p {
+//   font-size: 1.4rem;
+//   line-height: 1.4;
+//   color: lighten($color-2, 25%);
+
+//   a {
+//     color: $color-1;
+//     text-decoration: underline;
+//   }
+
+//   @include MQ(S) {
+//     font-size: 1.6rem;
+//     line-height: 1.6;
+//   }
+// }
