--- a/zengarden/style-guide-template/src/scss/styles.scss
+++ b/zengarden/style-guide-template/src/scss/styles.scss
@@ -1,5 +1,93 @@
-@import 'partials/variables';
 @import 'partials/reset';
-@import 'partials/prefix-mixins';
-@import 'partials/layout'; // responsive grid and media queries
+@import 'partials/variables';
 @import 'partials/typography';
+ @import 'partials/background'; // responsive grid and media queries
+
+.page-wrapper{
+    width: 100%;
+    display: grid;
+grid-template-columns: repeat(5, 1fr
+);
+}
+.intro{
+    grid-area: 1/2/3/6;
+    header{
+
+        h2{
+            left: 1rem;
+            top: 1rem;
+            position: absolute;
+            display: grid;
+            
+
+            }
+        }
+
+
+    
+    .summaty{
+
+    }
+    .preamble{
+
+    }
+    
+}
+.sidebar{
+    position: sticky;
+    grid-area: 2/1/7/2;
+    .wrapper{
+        .design-selection {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            nav{
+
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+            }
+            li{
+                margin: 1rem 0;
+            }
+            a{
+
+                display: block;
+            }
+        }
+        div  {
+            margin-bottom: 2rem;
+        }
+        
+
+    }
+    
+}
+.main{
+
+    grid-area: 3/2/7/6;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr
+    );
+    gap: 1rem;
+    >div{
+        background-color: $color-3;
+    }
+    .explanation{
+        grid-area: 1/1/3/3;
+        
+    }
+    .participation{
+        grid-area: 5/1/8/3;
+        
+    }
+    .requirements{
+        grid-area: 3/3/8/7;
+        
+    }
+    .benefits{
+        grid-area: 8/1/10/5;
+        
+    }
+
+}
